Tambah autentikasi Passport, Swagger Annotations, dan security scheme
