# app/Models/User.php
@@ -6,11 +6,28 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Passport\HasApiTokens;
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *     schema="User",
+ *     type="object",
+ *     required={"name", "email", "password"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="name", type="string", example="Neshia Hilton"),
+ *     @OA\Property(property="email", type="string", format="email", example="neshia@mail.com"),
+ *     @OA\Property(property="password", type="string", format="password", example="rahasia123"),
+ *     @OA\Property(property="password_confirmation", type="string", format="password", example="rahasia123"),
+ *     @OA\Property(property="created_at", type="string", format="date-time", example="2025-06-17T14:00:00Z"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time", example="2025-06-17T14:00:00Z")
+ * )
+ */
 
 class User extends Authenticatable
 {
     /** @use HasFactory<\Database\Factories\UserFactory> */
-    use HasFactory, Notifiable;
+    use HasFactory, Notifiable, HasApiTokens;
 
     /**
      * The attributes that are mass assignable.
